# python-message-channel

./: Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: channel.html  exceptions.html  index.html  router.html
message_channel/: __init__.py  channel.py  exceptions.py  router.py
tests/: conftest.py
tests/message_channel/: test_channel.py  test_router.py
